// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render default text 1`] = `
<span
  class="bgm-text"
>
  hello world
</span>
`;

exports[`should render secondary text 1`] = `
<span
  class="bgm-text bgm-text--secondary"
>
  hello world
</span>
`;

exports[`should render undefined text 1`] = `
<span
  class="bgm-text"
>
  hello world
</span>
`;
